--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <h1>Welcome to my portfolio website!</h1><br>
                     <strong><p class="lead text-dark py-2 fs-3 text-fluid">I'm a web developer with a passion for creating responsive and interactive websites.
                         </p></strong>
-                    <img src="C:\Users\KEE\Desktop\JS\ken\Moodle\WhatsApp Image 2025-10-15 at 08.33.20_8b5b33aa.jpg" alt="Profile Image" class="jimg">
+                    <img src="/KasoziJoel/website/blob/main/WhatsApp%20Image%202025-10-15%20at%2008.33.20_8b5b33aa.jpg" alt="Profile Image" class="jimg">
                     
                     </div>
                     
@@ -131,4 +131,5 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </body>
 </html>
+
 
